Overflow fix

--- a/app/assets/stylesheets/content.sass
+++ b/app/assets/stylesheets/content.sass
@@ -4,6 +4,7 @@
   right: 0
   bottom: 40px
   left: 300px
+  overflow: auto
 
   @media only screen and (max-width: 750px)
     left: 0
